--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,11 @@ import Layout from '../layouts/Layout.astro'
 import Three from '../components/Three.jsx'
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title='COCINA'>
 	<main class='h-screen flex justify-center bg-slate-500'>
 		<Three
 			client:load
-			title='GRAFITER'
+			title='COCINA'
 		/>
 	</main>
 </Layout>
